cabal-version:      2.4
name:               AdventOfCode2022
version:            0.1.0.0
synopsis:           My solutions to Advent of Code 2022

-- A longer description of the package.
-- description:
homepage:           https://github.com/vanhavel/adventofcode2022

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Lukas Huwald
maintainer:         dev.lukas.huwald@gmail.com

-- A copyright notice.
-- copyright:
category:           Development
extra-source-files:
    README.md

executable AdventOfCode2022
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Switcher, Utils, 
                      Days.Day1, Days.Day2, Days.Day3, Days.Day4, Days.Day5

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.0.0, composition ^>=1.0.2.2, split ^>= 0.2.3.5
    hs-source-dirs:   app,src
    default-language: Haskell2010
